Need to make sure I polyfill 'gap'

--- a/client/src/stylesheets/global.scss
+++ b/client/src/stylesheets/global.scss
@@ -48,6 +48,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        row-gap: 15px;
+        column-gap: 15px;
         gap: 15px;
 
         .channel:first-of-type {
@@ -188,6 +190,8 @@
 
                 .chat-message {
                     max-width: max(25vw, calc(50% - 60px));
+                    row-gap: 15px;
+                    column-gap: 15px;
                     gap: 15px;
                     border: 2px solid var(--matrix-green-light);
                     padding: 15px;
